--- a/AftershockComics/AftershockComics.html
+++ b/AftershockComics/AftershockComics.html
@@ -22,12 +22,65 @@
 <div class="mySlides" style="text-align: center;"><img src="Aftershock2.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Aftershock3.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Aftershock4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock30.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock31.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock32.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock33.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock34.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock35.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock36.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock37.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock38.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock39.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock40.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock41.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock42.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock43.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock44.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock45.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock46.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock47.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock48.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock49.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock50.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock51.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock52.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock53.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock54.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock55.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock56.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
+
 </p><p>
-AfterShock Comics is an American comic book publisher launched in 2015. AfterShock is described as a “hybrid comic book company combining the creative edge of an independent comic book publisher with the strengths and experience of a traditional powerhouse.” 
+<a href="https://aftershockcomics.com/">AfterShock Comics</a> is an American comic book publisher launched in 2015. AfterShock is described as a “hybrid comic book company combining the creative edge of an independent comic book publisher with the strengths and experience of a traditional powerhouse.” 
 </p><p>
 The company was co-founded by Joe Pruett, editor of the noted comic anthology Negative Burn and Mike Marts, the former executive editor in charge of Marvel Comics' X-Men franchise and DC Comics' Batman franchise. Other co-founders include Lee Kramer, Jon Kramer, and Michael Richter. Other senior executives include Jawad Qureshi. Lisa Yu-Nung Wu joined AfterShock Comics as Relations Manager. She used her experienced client relations in leveraging marketing and sales strategies to maximize AfterShock’s brand awareness. 
 </p><p>
@@ -43,59 +96,59 @@ Titles
 <li><a href="Aftershock3.jpg">Aftershock Genesis</a> (2016)
 <li><a href="Aftershock4.jpg">Alters</a> (2016)
 <li><a href="../AmericanMonster/AmericanMonster.html">American Monster</a> (2016)
-<li>Animosity (2016)
-<li>Animosity: Evolution (2017)
-<li>Animosity: The Rise (2017)
-<li>The Art of Jim Starlin
-<li>Babyteeth (2017)
-<li>Backways (2017)
-<li>Betrothed (2018)
-<li>Beyonders (2018)
-<li>Black-Eyed Kids (2016)
-<li>Black-Eyed Kids Black &amp; White Halloween Special (2016)
-<li>Brilliant Trash (2017)
-<li>Brothers Dracul (2018)
-<li>Captain Kid (2016)
-<li>Clankillers (2018)
-<li>Cold War (2018)
-<li>Dark Ark (2017)
-<li>Dead Kings (2018)
-<li>Dreaming Eagles (2015)
-<li>Eleanor and the Egret (2017)
+<li><a href="Aftershock5.jpg">Animosity</a> (2016)
+<li><a href="Aftershock6.jpg">Animosity: Evolution</a> (2017)
+<li><a href="Aftershock7.jpg">Animosity: The Rise</a> (2017)
+<li><a href="Aftershock8.jpg">Art of Jim Starlin</a> (2018)
+<li><a href="Aftershock9.jpg">Babyteeth</a> (2017)
+<li><a href="Aftershock10.jpg">Backways (2017)
+<li><a href="Aftershock11.jpg">Betrothed (2018)
+<li><a href="Aftershock12.jpg">Beyonders (2018)
+<li><a href="Aftershock13.jpg">Black-Eyed Kids (2016)
+<li><a href="Aftershock14.jpg">Brilliant Trash (2017)
+<li><a href="Aftershock15.jpg">Brothers Dracul (2018)
+<li><a href="Aftershock16.jpg">Captain Kid (2016)
+<li><a href="Aftershock17.jpg">Clankillers (2018)
+<li><a href="Aftershock18.jpg">Cold War (2018)
+<li><a href="Aftershock19.jpg">Dark Ark (2017)
+<li><a href="Aftershock20.jpg">Dead Kings (2018)
+<li><a href="Aftershock21.jpg">Dreaming Eagles (2015)
+<li><a href="Aftershock22.jpg">Eleanor and the Egret (2017)
 <li><a href="../FuJitsu/FuJitsu.html">Fu Jitsu</a> (2017)
-<li>Her Infernal Descent (2018)
-<li>Hot Lunch Special (2018)
-<li>Insexts (2015)
-<li>Jackpot! (2016)
-<li>Jimmy's Bastards (2017)
-<li>The Last Space Race (2018)
-<li>Lollipop Kids (2018)
-<li>Lost City Explorers (2018)
-<li>Monstro Mechanica (2017)
-<li>Moth &amp; Whisper (2018)
-<li>The Normals (2017)
-<li>Oberon
-<li>Patience! Conviction! Revenge! (2018)
-<li>Pestilence (2017)
-<li>Pestilence: Story of Satan (2018)
-<li>Relay (2018)
-<li>Replica (2015)
-<li>The Revisionist (2016)
-<li>Rough Riders (2016)
-<li>Rough Riders Nation (2016)
-<li>Rough Riders: Ride or Die (2018)
-<li>Rough Riders: Riders on the Storm (2017)
-<li>Second Sight (2016)
-<li>Shipwreck (2016)
-<li>Shock (2018)
-<li>Strayer (2016)
-<li>Superzero (2015)Unholy Grail (2017)
-<li>Volition (2018)
-<li>A Walk Through Hell[10]
-<li>A Walk Through Hell: Halloween Edition (2018)
-<li>Witch Hammer (2018)
-<li>World of Animosity (2017)
-<li>World Reader (2017)
+<li><a href="Aftershock23.jpg">Her Infernal Descent (2018)
+<li><a href="Aftershock24.jpg">Hot Lunch Special (2018)
+<li><a href="Aftershock25.jpg">Insexts (2015)
+<li><a href="Aftershock26.jpg">Jackpot! (2016)
+<li><a href="Aftershock27.jpg">Jimmy's Bastards (2017)
+<li><a href="Aftershock28.jpg">Last Space Race (2018)
+<li><a href="Aftershock29.jpg">Lollipop Kids (2018)
+<li><a href="Aftershock30.jpg">Lost City Explorers (2018)
+<li><a href="Aftershock31.jpg">Monstro Mechanica (2017)
+<li><a href="Aftershock32.jpg">Moth &amp; Whisper (2018)
+<li><a href="Aftershock33.jpg">Normals (2017)
+<li><a href="Aftershock34.jpg">Oberon (2019)
+<li><a href="Aftershock35.jpg">Patience! Conviction! Revenge! (2018)
+<li><a href="Aftershock36.jpg">Pestilence (2017)
+<li><a href="Aftershock37.jpg">Pestilence: Story of Satan (2018)
+<li><a href="Aftershock38.jpg">Relay (2018)
+<li><a href="Aftershock39.jpg">Replica (2015)
+<li><a href="Aftershock40.jpg">Revisionist (2016)
+<li><a href="Aftershock41.jpg">Rough Riders (2016)
+<li><a href="Aftershock42.jpg">Rough Riders Nation (2016)
+<li><a href="Aftershock43.jpg">Rough Riders: Ride or Die (2018)
+<li><a href="Aftershock44.jpg">Rough Riders: Riders on the Storm (2017)
+<li><a href="Aftershock45.jpg">Second Sight (2016)
+<li><a href="Aftershock46.jpg">Shipwreck (2016)
+<li><a href="Aftershock47.jpg">Shock (2018)
+<li><a href="Aftershock48.jpg">Strayer (2016)
+<li><a href="Aftershock49.jpg">Superzero (2015)
+<li><a href="Aftershock50.jpg">Unholy Grail (2017)
+<li><a href="Aftershock51.jpg">Volition (2018)
+<li><a href="Aftershock52.jpg">Walk Through Hell (2018)
+<li><a href="Aftershock53.jpg">Walk Through Hell: Halloween Edition (2018)
+<li><a href="Aftershock54.jpg">Witch Hammer (2018)
+<li><a href="Aftershock55.jpg">World of Animosity (2017)
+<li><a href="Aftershock56.jpg">World Reader (2017)
 </p>
 
 </body>
