--- a/index.html
+++ b/index.html
@@ -1411,6 +1411,13 @@
 </tr>
 
 <tr>
+<td>Aftershock Genesis</td>
+<td>2016</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Age of Apocalypse</td>
 <td>1995</td>
 <td>Marvel</td>
@@ -2443,6 +2450,13 @@
 </tr>
 
 <tr>
+<td>Alters</td>
+<td>2016</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Alvar Mayor: Death and Silver</td>
 <td>1989</td>
 <td>4 Winds</td>
@@ -3024,6 +3038,27 @@
 </tr>
 
 <tr>
+<td>Animosity</td>
+<td>2016</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Animosity: Evolution</td>
+<td>2017</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Animosity: The Rise</td>
+<td>2016</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Anna &amp; Froga</td>
 <td>2012</td>
 <td>Drawn &amp; Quarterly</td>
@@ -3378,6 +3413,13 @@
 <td>2009</td>
 <td>Abrams</td>
 <td><a href="AbramsBooks/AbramsBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Art of Jim Starlin</td>
+<td>2018</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -3864,6 +3906,13 @@
 </tr>
 
 <tr>
+<td>Babyteeth</td>
+<td>2017</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bachelor's Diary</td> 
 <td>1949</td>
 <td>Avon</td>
@@ -3875,6 +3924,13 @@
 <td>2008</td>
 <td>Secret Acres</td>
 <td><a href="SecretAcres/SecretAcres.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Backways</td>
+<td>2017</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -4542,6 +4598,13 @@
 </tr>
 
 <tr>
+<td>Betrothed</td>
+<td>2018</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bettie Page Comics</td>
 <td>1996</td>
 <td>Dark Horse</td>
@@ -4623,6 +4686,13 @@
 <td>1975</td>
 <td>Charlton</td>
 <td><a href="BeyondTheGrave/BeyondTheGrave.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Beyonders</td>
+<td>2018</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -5078,6 +5148,13 @@
 <td>1999</td>
 <td>Marvel</td>
 <td><a href="BlackWidow/BlackWidow.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Black-Eyed Kids</td>
+<td>2016</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -5766,6 +5843,13 @@
 </tr>
 
 <tr>
+<td>Brilliant Trash</td>
+<td>2017</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bringing Up Father</td>
 <td>1913</td>
 <td>Cupples &amp; Leon</td>
@@ -5791,6 +5875,13 @@
 <td>2001</td>
 <td>Marvel</td>
 <td><a href="Brotherhood/Brotherhood.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Brothers Dracul</td>
+<td>2018</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -6288,6 +6379,13 @@
 <td>1988</td>
 <td>Marvel</td>
 <td><a href="CaptainJustice/CaptainJustice.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Captain Kid</td>
+<td>2016</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -7157,6 +7255,13 @@
 </tr>
 
 <tr>
+<td>Clankillers</td>
+<td>2018</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Classic Comics</td>
 <td>1941</td>
 <td>Gilberton</td>
@@ -7342,6 +7447,13 @@
 <td>1986</td>
 <td>Blackthorne</td>
 <td><a href="Blackthorne/Blackthorne.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Cold War</td>
+<td>2018</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -8641,6 +8753,13 @@
 </tr>
 
 <tr>
+<td>Dark Ark</td>
+<td>2017</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dark Crystal</td>
 <td>1982</td>
 <td>Universal</td>
@@ -9037,6 +9156,13 @@
 <td>1995</td>
 <td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dead Kings</td>
+<td>2018</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -10167,6 +10293,13 @@
 </tr>
 
 <tr>
+<td>Dreaming Eagles</td>
+<td>2015</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Drew Friedman</td>
 <td>1960</td>
 <td>Creator</td>
@@ -10619,6 +10752,13 @@
 <td>1984</td>
 <td>Comico</td>
 <td><a href="Comico/Comico.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Eleanor and the Egret</td>
+<td>2017</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14051,6 +14191,13 @@
 </tr>
 
 <tr>
+<td>Her Infernal Descent</td>
+<td>2018</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Heralds</td>
 <td>2010</td>
 <td>Marvel</td>
@@ -14335,6 +14482,13 @@
 <td>2017</td>
 <td>Drawn &amp; Quarterly</td>
 <td><a href="Hostage/Hostage.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hot Lunch Special</td>
+<td>2018</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14968,6 +15122,13 @@
 </tr>
 
 <tr>
+<td>Insexts</td>
+<td>2015</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Instant Piano</td>
 <td>1994</td>
 <td>Dark Horse</td>
@@ -15269,6 +15430,13 @@
 </tr>
 
 <tr>
+<td>Jackpot!</td>
+<td>2016</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Jake Thrash</td>
 <td>1988</td>
 <td>Aircel</td>
@@ -15518,6 +15686,13 @@
 <td>2000</td>
 <td>Pantheon</td>
 <td><a href="JimmyCorrigan/JimmyCorrigan.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Jimmy's Bastards</td>
+<td>2017</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -16697,6 +16872,13 @@
 </tr>
 
 <tr>
+<td>Last Space Race</td>
+<td>2018</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Last Starfighter</td>
 <td>1984</td>
 <td>Universal</td>
@@ -17179,6 +17361,13 @@
 </tr>
 
 <tr>
+<td>Lollipop Kids</td>
+<td>2018</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Lone</td>
 <td>2004</td>
 <td>Dark Horse</td>
@@ -17288,6 +17477,13 @@
 <td>1996</td>
 <td>Caliber</td>
 <td><a href="CaliberComics/CaliberComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Lost City Explorers</td>
+<td>2018</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -19397,6 +19593,20 @@
 </tr>
 
 <tr>
+<td>Monstro Mechanica</td>
+<td>2017</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Moth &amp; Whisper</td>
+<td>2018</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Monty Python</td>
 <td>1969</td>
 <td>BBC</td>
@@ -20615,6 +20825,13 @@
 </tr>
 
 <tr>
+<td>Normals</td>
+<td>2017</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Norman Rockwell</td>
 <td>1894</td>
 <td>Creator</td>
@@ -20727,7 +20944,14 @@
 </tr>
 
 <tr>
-<td><a name="o">Oblivion</a></td>
+<td><a name="o">Oberon</a></td>
+<td>2019</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Oblivion</td>
 <td>1995</td>
 <td>Comico</td>
 <td><a href="Comico/Comico.html">Details</a></td>
@@ -21350,6 +21574,13 @@
 </tr>
 
 <tr>
+<td>Patience! Conviction! Revenge!</td>
+<td>2018</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Patsy Walker</td>
 <td>1945</td>
 <td>Marvel</td>
@@ -21494,6 +21725,20 @@
 <td>2012</td>
 <td>Creator</td>
 <td><a href="Perturbator/Perturbator.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Pestilence</td>
+<td>2017</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Pestilence: Story of Satan</td>
+<td>2018</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -22768,6 +23013,13 @@
 </tr>
 
 <tr>
+<td>Relay</td>
+<td>2018</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Rembrandt</td>
 <td>1606</td>
 <td>Creator</td>
@@ -22800,6 +23052,13 @@
 <td>1984</td>
 <td>Universal</td>
 <td><a href="RepoMan/RepoMan.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Replica</td>
+<td>2015</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -22863,6 +23122,13 @@
 <td>1995</td>
 <td>Dark Horse</td>
 <td><a href="Revelations/Revelations.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Revisionist</td>
+<td>2016</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -23338,6 +23604,27 @@
 <td>1988</td>
 <td>Blue Comet</td>
 <td><a href="BlueCometPress/BlueCometPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Rough Riders</td>
+<td>2016</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Rough Riders: Ride Or Die</td>
+<td>2018</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Rough Riders: Riders On The Storm</td>
+<td>2017</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -23935,6 +24222,13 @@
 </tr>
 
 <tr>
+<td>Second Sight</td>
+<td>2016</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Seconds</td>
 <td>2014</td>
 <td>Random House</td>
@@ -24415,6 +24709,20 @@
 <td>1996</td>
 <td>Caliber</td>
 <td><a href="CaliberComics/CaliberComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Shipwreck</td>
+<td>2016</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Shock</td>
+<td>2018</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -25868,6 +26176,13 @@
 </tr>
 
 <tr>
+<td>Strayer</td>
+<td>2016</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Street &amp; Smith</td>
 <td>1855</td>
 <td>Publisher</td>
@@ -26151,6 +26466,13 @@
 <td>1993</td>
 <td>Marvel</td>
 <td><a href="SuperSoldiers/SuperSoldiers.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Superzero</td>
+<td>2015</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -27470,6 +27792,13 @@
 </tr>
 
 <tr>
+<td>Unholy Grail</td>
+<td>2017</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Unholy Union</td>
 <td>2007</td>
 <td>Marvel</td>
@@ -27891,6 +28220,13 @@
 </tr>
 
 <tr>
+<td>Volition</td>
+<td>2018</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Voodoo</td>
 <td>1952</td>
 <td>Farrell</td>
@@ -27916,6 +28252,13 @@
 <td>1856</td>
 <td>Creator</td>
 <td><a href="WWDenslow/WWDenslow.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Walk Through Hell</td>
+<td>2018</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -28794,6 +29137,13 @@
 </tr>
 
 <tr>
+<td>Witch Hammer</td>
+<td>2018</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Witchcraft</td>
 <td>1952</td>
 <td>Avon</td>
@@ -28927,6 +29277,13 @@
 </tr>
 
 <tr>
+<td>World of Animosity</td>
+<td>2017</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>World of Fantasy</td>
 <td>1956</td>
 <td>Marvel</td>
@@ -28959,6 +29316,13 @@
 <td>1956</td>
 <td>Atlas</td>
 <td><a href="WorldOfSuspense/WorldOfSuspense.html">Details</a></td>
+</tr>
+
+<tr>
+<td>World Reader</td>
+<td>2017</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
 </tr>
 
 <tr>
