--- a/Eclipse/Eclipse.html
+++ b/Eclipse/Eclipse.html
@@ -87,11 +87,11 @@ Eclipse Titles
 <li><a href="Eclipse3.jpg">3-D Laser Eraser and Pressbutton</a> (1986)
 <li><a href="Eclipse4.jpg">Aces</a> (1988)
 <li><a href="Eclipse5.jpg">Adolescent Radioactive Black Belt Hamsters</a> (1986)
-<li><a href="Eclipse6.jpg">Airboy</a> (1986)
-<li><a href="Eclipse7.jpg">Airboy Meets the Prowler</a> (1987)
-<li><a href="Eclipse8.jpg">Airboy - Mr.Monster special</a> (1987)
+<li><a href="Eclipse7.jpg">Airboy</a> (1986)
+<li><a href="Eclipse8.jpg">Airboy Meets the Prowler</a> (1987)
+<li><a href="Eclipse10.jpg">Airboy - Mr. Monster Special</a> (1987)
 <li><a href="Eclipse9.jpg">Airboy versus the Airmaidens (1988)
-<li><a href="Eclipse10.jpg">Air Fighters Classics</a> (1987)
+<li><a href="Eclipse6.jpg">Air Fighters Classics</a> (1987)
 <li><a href="Eclipse11.jpg">Airfighters Meet Sgt. Strike Special</a> (1988)
 <li><a href="Eclipse12.jpg">Airmaidens Special</a>
 <li><a href="../AlienEncounters/AlienEncounters.html">Alien Encounters</a> (1985)
@@ -152,7 +152,7 @@ Eclipse Titles
 <li><a href="Eclipse63.jpg">Dragon Chiang</a> (1991)
 <li><a href="Eclipse64.jpg">Dragonflight</a> (1991)
 <li><a href="Eclipse65.jpg">Dread</a> (1992) 
-<li><a href="Eclipse66.jpg">The Dreamery</a> (1986)
+<li><a href="Eclipse66.jpg">Dreamery</a> (1986)
 <li><a href="../EclipseMagazine/EclipseMagazine.html">Eclipse Magazine</a> (1981)
 <li><a href="Eclipse67.jpg">Eclipse Monthly</a> (1983)
 <li><a href="Eclipse68.jpg">El Salvador: A House Divided</a> (1989)
@@ -166,7 +166,7 @@ Eclipse Titles
 <li><a href="Eclipse76.jpg">Floyd Farland - Citizen of the Future</a> (1987)
 <li><a href="Eclipse77.jpg">Fly In My Eye</a> (1990)
 <li><a href="Eclipse78.jpg">Fly In My Eye Exposed</a> (1992)
-<li><a href="Eclipse79.jpg">The Foozle</a> (1985)
+<li><a href="Eclipse79.jpg">Foozle</a> (1985)
 <li><a href="Eclipse80.jpg">Fun With Reid Fleming</a> (1991)
 <li><a href="Eclipse81.jpg">Fusion</a> (1987)
 <li><a href="Eclipse82.jpg">Giant-Size Mini Comics</a> (1986)
@@ -176,7 +176,7 @@ Eclipse Titles
 <li><a href="Eclipse86.jpg">Hand of Fate</a> (1988)
 <li><a href="Eclipse87.jpg">Heartbreak Comics</a> (1988)
 <li><a href="Eclipse88.jpg">Hembeck: The Best of Dateline: @!!?#</a> (1979)
-<li><a href="Eclipse89.jpg">The Hobbit</a> (1989)
+<li><a href="Eclipse89.jpg">Hobbit</a> (1989)
 <li><a href="Eclipse90.jpg">Hotspur</a> (1987)
 <li><a href="Eclipse91.jpg">I Am Coyote</a> (1984)
 <li><a href="Eclipse92.jpg">I Am Legend</a> (1991)
@@ -208,9 +208,9 @@ Eclipse Titles
 <li><a href="Eclipse118.jpg">Metaphysique</a> (1992)
 <li><a href="Eclipse119.jpg">Mike Mist Minute Mist-Eries</a> (1981)
 <li><a href="Eclipse120.jpg">Milton Caniff's America</a> (1987)
-<li><a href="../Miracleman/Miracleman.html">Miracleman</a>
-<li><a href="../Miracleman/Miracleman.html">Miracleman: Apocrypha</a>
-<li><a href="Eclipse121.jpg">Miracleman</a> (1988)
+<li><a href="../Miracleman/Miracleman.html">Miracleman</a> (1985)
+<li><a href="../Miracleman/Miracleman.html">Miracleman: Apocrypha</a> (1985)
+<li><a href="Eclipse121.jpg">Miracleman Family</a> (1988)
 <li><a href="Eclipse122.jpg">Mr. Monster's Super Duper Special</a> (1986)
 <li><a href="Eclipse123.jpg">Ms. Tree</a> (1983)
 <li><a href="Eclipse124.jpg">New America</a> (1987)
@@ -251,16 +251,16 @@ Eclipse Titles
 <li><a href="Eclipse159.jpg">Rocketeer</a> (1985)
 <li><a href="Eclipse160.jpg">Rocketeer Special Edition</a> (1984)
 <li><a href="../Sabre/Sabre.html">Sabre: Slow Fade of an Endangered Species</a> (1978)
-<li><a href="../Sabre/Sabre.html">Sabre</a> 
+<li><a href="../Sabre/Sabre.html">Sabre</a> (1978)
 <li><a href="Eclipse161.jpg">Sacred and the Profane</a> (1987)
 <li><a href="Eclipse162.jpg">Samurai, Son of Death</a> (1987)
 <li><a href="Eclipse163.jpg">Saturday Mourning: Fly In My Eye</a> (1989)
 <li><a href="Eclipse164.jpg">Scorpio Rose</a> (1983)
-<li><a href="Eclipse165.jpg">Scout</a> (1985)
-<li><a href="Eclipse166.jpg">Scout: Handbook</a> (1987)
-<li><a href="Eclipse168.jpg">Scout: Four Monsters</a> (1988)
-<li><a href="Eclipse167.jpg">Scout: Mount Fire</a> (1989)
-<li><a href="Eclipse169.jpg">Scout: War Shaman</a> (1988)
+<li><a href="../Scout/Scout.html">Scout</a> (1985)
+<li><a href="../Scout/Scout.html">Scout: Handbook</a> (1987)
+<li><a href="../Scout/Scout.html">Scout: Four Monsters</a> (1988)
+<li><a href="../Scout/Scout.html">Scout: Mount Fire</a> (1989)
+<li><a href="../Scout/Scout.html">Scout: War Shaman</a> (1988)
 <li><a href="Eclipse170.jpg">Siegel and Shuster, Dateline 1930s</a> (1984)
 <li><a href="Eclipse171.jpg">Silverheels</a> (1987)
 <li><a href="Eclipse172.jpg">Sisterhood of Steel</a> (1987)
@@ -288,7 +288,7 @@ Eclipse Titles
 <li><a href="Eclipse194.jpg">Tapping the Vein</a> (1989)
 <li><a href="Eclipse195.jpg">Target: Airboy</a> (1988)
 <li><a href="Eclipse196.jpg">Teen-Aged Dope Slaves and Reform School Girls</a> (1989)
-<li><a href="Eclipse197.jpg">Toadswart d'Amplestone: A Gothic Tale of Horror and Magick</a>
+<li><a href="Eclipse197.jpg">Toadswart d'Amplestone: A Gothic Tale of Horror and Magick</a> (1990)
 <li><a href="Eclipse198.jpg">Tor 3-D</a> (1986)
 <li><a href="Eclipse199.jpg">Total Eclipse</a> (1988)
 <li><a href="Eclipse200.jpg">Total Eclipse: The Seraphim Objective</a> (1988)
@@ -317,7 +317,7 @@ Eclipse Titles
 <li><a href="Eclipse223.jpg">Yattering and Jack</a> (1991)
 <li><a href="Eclipse224.jpg">Zooniverse</a> (1986)
 <li><a href="Eclipse225.jpg">Zorro in Old California</a> (1986)
-<li><a href="../ScottMcCloud/ScottMcCloud.html">Zot!</a>
+<li><a href="../ScottMcCloud/ScottMcCloud.html">Zot!</a> (1984)
 </p>
 
 </body>
