--- a/Charlton/Charlton.html
+++ b/Charlton/Charlton.html
@@ -211,7 +211,7 @@ The company was formed by John Santangelo, Sr. and Ed Levy in 1940 as T.W.O. Cha
 <li><a href="Charlton105.jpg">Hunk</a> (1961)
 <li><a href="Charlton106.jpg">Iron Corporal</a> (1985)
 <li><a href="Charlton107.jpg">Jack in the Box</a> (1946)
-<li><a href="Charlton108.jpg">The Jetsons</a> (1970)
+<li><a href="Charlton108.jpg">Jetsons</a> (1970)
 <li><a href="Charlton109.jpg">Johnny Dynamite</a>  (1955)
 <li><a href="Charlton110.jpg">Judomaster</a> (1966)
 <li><a href="Charlton111.jpg">Jungle Jim</a> (1969)
@@ -248,7 +248,7 @@ The company was formed by John Santangelo, Sr. and Ed Levy in 1940 as T.W.O. Cha
 <li><a href="Charlton137.jpg">Scary Tales</a>   (1975)
 <li><a href="Charlton138.jpg">Scotland Yard</a>  (1955)
 <li><a href="Charlton139.jpg">Secret Agent</a> (1967)
-<li><a href="Charlton140.jpg">The Six Million Dollar Man (1976)
+<li><a href="Charlton140.jpg">Six Million Dollar Man (1976)
 <li><a href="../SpaceAdventures/SpaceAdventures.html">Space Adventures</a> (1952) 
 <li><a href="Charlton141.jpg">Space: 1999</a>  (1975)
 <li><a href="../SpaceWar/SpaceWar.html">Space War</a> (1959) 
