--- a/index.html
+++ b/index.html
@@ -14555,6 +14555,13 @@
 </tr>
 
 <tr>
+<td>Hollywood Romances</td>
+<td>1966</td>
+<td>Charlton</td>
+<td><a href="Charlton/Charlton.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Hollywood Superstars</td>
 <td>1990</td>
 <td>Epic</td>
@@ -14660,6 +14667,20 @@
 </tr>
 
 <tr>
+<td>Hot Rod Racers</td>
+<td>1964</td>
+<td>Charlton</td>
+<td><a href="Charlton/Charlton.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hot Rods and Racing Cars</td>
+<td>1951</td>
+<td>Charlton</td>
+<td><a href="Charlton/Charlton.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Hotspur</td>
 <td>1989</td>
 <td>Eclipse</td>
@@ -14716,6 +14737,13 @@
 </tr>
 
 <tr>
+<td>House Of Yang</td>
+<td>1975</td>
+<td>Charlton</td>
+<td><a href="Charlton/Charlton.html">Details</a></td>
+</tr>
+
+<tr>
 <td>House on the Borderland</td>
 <td>2000</td>
 <td>Vertigo</td>
@@ -14762,6 +14790,13 @@
 <td>2015</td>
 <td>Marvel</td>
 <td><a href="HowardTheHuman/HowardTheHuman.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Huckleberry Hound</td>
+<td>1970</td>
+<td>Charlton</td>
+<td><a href="Charlton/Charlton.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14825,6 +14860,13 @@
 <td>2018</td>
 <td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hunk</td>
+<td>1961</td>
+<td>Charlton</td>
+<td><a href="Charlton/Charlton.html">Details</a></td>
 </tr>
 
 <tr>
@@ -15430,6 +15472,13 @@
 </tr>
 
 <tr>
+<td>Iron Corporal</td>
+<td>1985</td>
+<td>Charlton</td>
+<td><a href="Charlton/Charlton.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Iron Fist</td>
 <td>1975</td>
 <td>Marvel</td>
@@ -15609,6 +15658,13 @@
 <td>1987</td>
 <td>Blackthorne</td>
 <td><a href="Blackthorne/Blackthorne.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Jack In The Box</td>
+<td>1946</td>
+<td>Charlton</td>
+<td><a href="Charlton/Charlton.html">Details</a></td>
 </tr>
 
 <tr>
@@ -15826,6 +15882,13 @@
 <td>2011</td>
 <td>Publisher</td>
 <td><a href="47North/47North.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Jetsons</td>
+<td>1970</td>
+<td>Charlton</td>
+<td><a href="Charlton/Charlton.html">Details</a></td>
 </tr>
 
 <tr>
@@ -16123,6 +16186,13 @@
 </tr>
 
 <tr>
+<td>Johnny Dynamite</td>
+<td>1955</td>
+<td>Charlton</td>
+<td><a href="Charlton/Charlton.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Johnny Nemo Magazine</a></td>
 <td>1985</td>
 <td>Eclipse</td>
@@ -16242,6 +16312,13 @@
 </tr>
 
 <tr>
+<td>Judomaster</td>
+<td>1966</td>
+<td>Charlton</td>
+<td><a href="Charlton/Charlton.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Jumbo Comics</td>
 <td>1938</td>
 <td>Fiction House</td>
@@ -16270,6 +16347,13 @@
 </tr>
 
 <tr>
+<td>Jungle Jim</td>
+<td>1969</td>
+<td>Charlton</td>
+<td><a href="Charlton/Charlton.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Jungle Love</td>
 <td>1991</td>
 <td>Aircel</td>
@@ -16281,6 +16365,13 @@
 <td>1954</td>
 <td>Marvel</td>
 <td><a href="JungleTales/JungleTales.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Jungle Tales Of Tarzan</td>
+<td>1964</td>
+<td>Charlton</td>
+<td><a href="Charlton/Charlton.html">Details</a></td>
 </tr>
 
 <tr>
@@ -16907,6 +16998,13 @@
 </tr>
 
 <tr>
+<td>Korg: 70,000 B.C.</td>
+<td>1975</td>
+<td>Charlton</td>
+<td><a href="Charlton/Charlton.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Kraven's Last Hunt</td>
 <td>1987</td>
 <td>Marvel</td>
@@ -17194,6 +17292,13 @@
 </tr>
 
 <tr>
+<td>Lawbreakers Suspense Stories</td>
+<td>1953</td>
+<td>Charlton</td>
+<td><a href="Charlton/Charlton.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Lawdog</td>
 <td>1993</td>
 <td>Epic</td>
@@ -17362,6 +17467,13 @@
 </tr>
 
 <tr>
+<td>Li'l Genius</td>
+<td>1954</td>
+<td>Charlton</td>
+<td><a href="Charlton/Charlton.html">Details</a></td>
+</tr>
+
+<tr>
 <td>License To Kill</a></td>
 <td>1989</td>
 <td>Eclipse</td>
@@ -17437,6 +17549,7 @@
 <td>Fantagraphics</td>
 <td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
 </tr>
+
 <tr>
 <td>Linda Carter, Student Nurse</td>
 <td>1961</td>
@@ -18443,6 +18556,13 @@
 <td>1929</td>
 <td>Creator</td>
 <td><a href="MarieSeverin/MarieSeverin.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Marines Attack</td>
+<td>1964</td>
+<td>Charlton</td>
+<td><a href="Charlton/Charlton.html">Details</a></td>
 </tr>
 
 <tr>
@@ -20349,6 +20469,13 @@
 </tr>
 
 <tr>
+<td>My Little Margie</td>
+<td>1954</td>
+<td>Charlton</td>
+<td><a href="Charlton/Charlton.html">Details</a></td>
+</tr>
+
+<tr>
 <td>My Little Pony</td>
 <td>1981</td>
 <td>Hasbro</td>
@@ -20430,6 +20557,13 @@
 <td>1951</td>
 <td>Story</td>
 <td><a href="MysteriousAdventures/MysteriousAdventures.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mysterious Suspense</td>
+<td>1968</td>
+<td>Charlton</td>
+<td><a href="Charlton/Charlton.html">Details</a></td>
 </tr>
 
 <tr>
@@ -20594,6 +20728,13 @@
 </tr>
 
 <tr>
+<td>Nature Boy</td>
+<td>1956</td>
+<td>Charlton</td>
+<td><a href="Charlton/Charlton.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Nature of the Beast</td>
 <td>1991</td>
 <td>Caliber</td>
@@ -20612,6 +20753,13 @@
 <td>1954</td>
 <td>Atlas</td>
 <td><a href="NavyAction/NavyAction.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Navy War Heroes</td>
+<td>1965</td>
+<td>Charlton</td>
+<td><a href="Charlton/Charlton.html">Details</a></td>
 </tr>
 
 <tr>
@@ -24517,6 +24665,12 @@
 </tr>
 
 <tr>
+<td>Sam Glanzman</td>
+<td>1924</td>
+<td>Creator</td>
+<td><a href="SamGlanzman/SamGlanzman.html">Details</a></td>
+
+<tr>
 <td>Sam's Strip</td>
 <td>2009</td>
 <td>Fantagraphics</td>
@@ -28032,6 +28186,13 @@
 <td>1970</td>
 <td>Creator</td>
 <td><a href="TimLaneUK/TimLaneUK.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Tim Truman</td>
+<td>1956</td>
+<td>Creator</td>
+<td><a href="TimTruman/TimTruman.html">Details</a></td>
 </tr>
 
 <tr>
